[metadata]
name = resonance-Izaakwltn
version = 0.0.1
author = Izaak Walton
author_email = izaak@protonmail.com
description = A module for analyzing resonance and overtones.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/Izaakwltn/resonance
project_urls = https://github.com/Izaakwltn
classifiers = Programming Language :: Python :: 3
              License :: OSI Approved :: GNU General Purpose License
	      Operating System :: OS Independent

[options]
package_dir =
	    = src
packages = find
python_requires = >=3.8

[options.packages.find]
where = src